# lucius-mcp

./: AGENTS.md  pyproject.toml
.github/workflows/: _cli_build_test.yml  _docker_build_push.yml  _mcpb_build.yml  _pages_build_deploy.yml  _python_check.yml  e2e-tests.yml  pr-quality-gate.yml  release.yml
docs/: development.md  telemetry.md
scripts/: prepare-release.md
specs/implementation-artifacts/: 11-1-flatten-telemetry-event-names.md  sprint-status.yaml
specs/project-planning-artifacts/: epics.md
src/: main.py
src/services/: defect_service.py  launch_service.py  plan_service.py  search_service.py  telemetry_service.py  test_case_service.py
src/tools/: annotations.py  output_contract.py  output_schemas.py
src/utils/: aql.py  schema.py
tests/: conftest.py
tests/cli/: test_cli_coverage_helpers.py
tests/e2e/: test_telemetry_collection_e2e.py
tests/integration/: test_telemetry_integration.py
tests/unit/: test_defect_service.py  test_launch_service.py  test_plan_service.py  test_remaining_coverage.py  test_search_service.py  test_telemetry_service.py  test_test_case_service_issue_linking.py  test_tool_registry.py
